--- a/src/main/java/GUI/UserDashboard.form
+++ b/src/main/java/GUI/UserDashboard.form
@@ -1,13 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.UserDashboard">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="20" y="20" width="800" height="624"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="800" height="600"/>
+      <minimumSize width="800" height="600"/>
+      <preferredSize width="800" height="600"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <grid id="2a834" binding="topPanel" layout-manager="BorderLayout" hgap="5" vgap="2">
+        <constraints/>
+        <properties>
+          <font name="Droid Sans Mono" size="36" style="1"/>
+          <maximumSize width="800" height="160"/>
+          <minimumSize width="800" height="160"/>
+          <preferredSize width="800" height="160"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="ddeb" class="javax.swing.JLabel" binding="welcomeText">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <font name="Droid Sans Mono" size="48" style="1"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value="Bentornato, User!"/>
+              <verticalAlignment value="3"/>
+              <verticalTextPosition value="3"/>
+            </properties>
+          </component>
+          <component id="32824" class="javax.swing.JLabel">
+            <constraints border-constraint="South"/>
+            <properties>
+              <font name="Droid Sans Mono" size="18" style="0"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value="È il momento di prenotare una vacanza!"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="9a8e4" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="25"/>
+          <minimumSize width="800" height="25"/>
+          <preferredSize width="800" height="25"/>
+        </properties>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <grid id="dd45c" binding="btnsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints/>
+        <properties>
+          <maximumSize width="500" height="270"/>
+          <minimumSize width="500" height="270"/>
+          <preferredSize width="500" height="270"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <grid id="12949" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="West"/>
+            <properties>
+              <maximumSize width="250" height="250"/>
+              <minimumSize width="250" height="250"/>
+              <preferredSize width="250" height="250"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="c8ac8" class="javax.swing.JButton" binding="btnPrenotaVolo">
+                <constraints border-constraint="North"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <horizontalTextPosition value="0"/>
+                  <margin top="0" left="0" bottom="0" right="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Prenota Volo"/>
+                </properties>
+              </component>
+              <component id="1f4f6" class="javax.swing.JButton" binding="btnAreaPersonale">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Area Personale"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="e08ee" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <maximumSize width="250" height="250"/>
+              <minimumSize width="250" height="250"/>
+              <preferredSize width="250" height="250"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="c2bdf" class="javax.swing.JButton" binding="btnViewVoli">
+                <constraints border-constraint="North"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <horizontalTextPosition value="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Visualizza Voli"/>
+                </properties>
+              </component>
+              <component id="ad9e4" class="javax.swing.JButton" binding="btnLogout">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Logout"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </grid>
+    </children>
   </grid>
 </form>
