--- a/src/main/java/GUI/DialogModificaVolo.form
+++ b/src/main/java/GUI/DialogModificaVolo.form
@@ -169,20 +169,6 @@
               <text value="Stato:"/>
             </properties>
           </component>
-          <component id="5d65d" class="javax.swing.JTextField" binding="txtStato">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties>
-              <font name="JetBrains Mono Medium" size="12" style="0"/>
-              <maximumSize width="200" height="30"/>
-              <minimumSize width="200" height="30"/>
-              <preferredSize width="200" height="30"/>
-            </properties>
-          </component>
           <component id="ff0d2" class="javax.swing.JLabel">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -238,6 +224,17 @@
             </constraints>
             <properties>
               <font name="JetBrains Mono Medium" size="12" style="0"/>
+              <maximumSize width="200" height="30"/>
+              <minimumSize width="200" height="30"/>
+              <preferredSize width="200" height="30"/>
+            </properties>
+          </component>
+          <component id="8bf8e" class="javax.swing.JComboBox" binding="cbStato">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
               <maximumSize width="200" height="30"/>
               <minimumSize width="200" height="30"/>
               <preferredSize width="200" height="30"/>
