--- a/src/main/java/GUI/UserDashboard.form
+++ b/src/main/java/GUI/UserDashboard.form
@@ -75,7 +75,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="c8ac8" class="javax.swing.JButton" binding="btnPrenotaVolo">
+              <component id="c8ac8" class="javax.swing.JButton" binding="btnViewOpt">
                 <constraints border-constraint="North"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
@@ -85,7 +85,7 @@
                   <maximumSize width="150" height="125"/>
                   <minimumSize width="150" height="125"/>
                   <preferredSize width="150" height="125"/>
-                  <text value="Prenota Volo"/>
+                  <text value="Opzioni di Ricerca"/>
                 </properties>
               </component>
               <component id="1f4f6" class="javax.swing.JButton" binding="btnAreaPersonale">
